--- a/frontend/src/pages/LandingPage/index.scss
+++ b/frontend/src/pages/LandingPage/index.scss
@@ -10,7 +10,7 @@
 }
 
 .page--splash {
-  height: 100%;
+  height: 100vh;
   background-color: $color-darkgray;
 }
 
@@ -29,7 +29,7 @@
     text-align: center;
     color: #ffffff;
     font-weight: 300;
-    font-size: 2.8rem;
+    font-size: 4.2rem;
     margin-bottom: 40px;
 
     & strong {
