--- a/frontend/src/styles/_globals.scss
+++ b/frontend/src/styles/_globals.scss
@@ -206,7 +206,7 @@ ul.custom-listing{
 		padding-left:40px;
 		}
 		&.address{
-		background-image:url(../assets/images/icons//home.svg);
+		background-image:url(../assets/images/icons/home.svg);
 		background-repeat:no-repeat;
 		background-position:0px 50%;
 		background-size:24px;
@@ -216,7 +216,7 @@ ul.custom-listing{
 	&--checked{
 		& li{
 		padding:5px 0 5px 30px;
-		background-image:url(../assets/images/icons//checked-simple.svg);
+		background-image:url(../assets/images/icons/checked-simple.svg);
 		background-repeat:no-repeat;
 		background-position:0px 50%;
 		background-size:18px;
@@ -621,6 +621,362 @@ ul.custom-listing{
           }
       }
   }
+
+  /*===============================================*/
+/* 4. HEADER */
+/*===============================================*/
+
+.header{
+    width:100%;
+    padding:20px 0;
+    color:#fff;
+        &--absolute{
+        position:absolute;
+        top:0px;
+        left:0px;
+        z-index:888;
+        }
+        &--fixed{
+        position:fixed;
+        top:0px;
+        left:0px;
+        z-index:888;
+        }
+        &--page{
+        background-color:#000;
+        }
+        &--transparent{
+        background:none;
+        }
+        &--gradient{
+        background: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
+        }
+        &__inner{
+        width:calc(100% - 40px);
+        padding:0 20px;
+        display:flex;
+        align-items:center;
+        justify-content:space-between;
+        }
+        &__icon{
+        cursor:pointer;
+            & img{
+            display:block;
+            max-width:20px;
+            }
+            &--empty-space{
+              width:20px;
+            }
+            &--menu{
+              width:20px;
+              height:16px;
+              -webkit-transform: rotate(0deg);
+              -moz-transform: rotate(0deg);
+              -o-transform: rotate(0deg);
+              transform: rotate(0deg);
+              -webkit-transition: .3s ease-in-out;
+              -moz-transition: .3s ease-in-out;
+              -o-transition: .3s ease-in-out;
+              transition: .3s ease-in-out;
+              cursor: pointer;
+                & span {
+                      display: block;
+                      position: absolute;
+                      height: 1px;
+                      width: 50%;
+                      background: #fff;
+                      opacity: 1;
+                      left: 0;
+                      -webkit-transform: rotate(0deg);
+                      -moz-transform: rotate(0deg);
+                      -o-transform: rotate(0deg);
+                      transform: rotate(0deg);
+                      -webkit-transition: .25s ease-in-out;
+                      -moz-transition: .25s ease-in-out;
+                      -o-transition: .25s ease-in-out;
+                      transition: .25s ease-in-out;
+                      -webkit-tap-highlight-color: transparent;
+                    }
+                & span:nth-child(even) {
+                  left: 50%;
+                }
+                & span:nth-child(odd) {
+                  left:0px;
+                }
+                & span:nth-child(1), & span:nth-child(2) {
+                  top: 0px;
+                }
+                & span:nth-child(3), & span:nth-child(4) {
+                  top: 6px;
+                }
+                & span:nth-child(5), & span:nth-child(6) {
+                  top: 12px;
+                }
+                &.open span:nth-child(1), &.open span:nth-child(6) {
+                      -webkit-transform: rotate(45deg);
+                      -moz-transform: rotate(45deg);
+                      -o-transform: rotate(45deg);
+                      transform: rotate(45deg);
+                      background: #000000;
+                    }
+                &.open span:nth-child(2), &.open span:nth-child(5) {
+                      -webkit-transform: rotate(-45deg);
+                      -moz-transform: rotate(-45deg);
+                      -o-transform: rotate(-45deg);
+                      transform: rotate(-45deg);
+                      background: #000000;
+                    }
+                &.open span:nth-child(1) {
+                      left: 2px;
+                      top: 4px;
+                    }
+                &.open span:nth-child(2) {
+                      left: calc(50% - 2px);
+                      top: 4px;
+                    }
+                &.open span:nth-child(3) {
+                      left: -50%;
+                      opacity: 0;
+                    }
+                &.open span:nth-child(4) {
+                      left: 100%;
+                      opacity: 0;
+                    }
+                &.open span:nth-child(5) {
+                      left: 2px;
+                      top: 12px;
+                    }
+                &.open span:nth-child(6) {
+                      left: calc(50% - 2px);
+                      top: 12px;
+                    }
+            }
+            &--cart{
+            position:relative;
+                & span{
+                position:absolute;
+                top:-10px;
+                right:-10px;
+                width:20px;
+                height:20px;
+                border-radius:50%;
+                text-align:center;
+                line-height:20px;
+                font-size:1.1rem;
+                font-weight:600;
+                background-color:#fff;
+                color:$color-blue;
+                    &.animate{
+                    animation: cartnr 1.5s cubic-bezier(.39,.01,.17,1);
+                    animation-iteration-count: 1;
+                    }
+                }
+            }
+            &--more{
+                & img{
+                width:6px;
+                }
+            }
+        }
+        &__icons-group{
+        display:flex;
+        align-items:center;
+            &--right .header__icon{
+            margin-left:20px;
+            }
+            &--left .header__icon{
+            margin-right:20px;
+            }
+        }
+        //LOGO
+        
+        &__logo{
+            &--text{
+            color:#fff;
+            font-size:1.8rem;
+            font-weight:400;
+                & strong{
+                font-weight:600;
+                color:$color-lightgreen;
+                }
+                & a{
+                color:#fff;
+                }
+            }
+            &--intro{
+            font-size:2.8rem;
+            width:100%;
+            text-align:center;
+            }
+        }
+        &__title{
+            color:#000000;
+            font-size:1.8rem;
+            font-weight:300;
+        }
+    
+    }
+    @keyframes cartnr {
+      0% {
+        transform:scale(1.5);
+      }
+      50% {
+        transform:scale(0.8);
+      }
+      100% {
+        transform:scale(1.5);
+      }
+    }
+    /*===============================================*/
+    /* 5. BOTTOM TOOLBAR */
+    /*===============================================*/
+    
+    .bottom-navigation{
+    width:100%;
+    position:absolute;
+    bottom:0px;
+    left:0px;
+    z-index:888;
+    background-color:#000;
+    padding:10px 0;
+    overflow:hidden;
+        &--gradient{
+        background: linear-gradient(180deg, rgba(41,31,87,0) 0%, rgba(41,31,87,0) 30%, rgba(41,31,87,1) 30%, rgba(41,31,87,1) 100%);
+        }
+        &--white{
+        background-color:#ffffff;
+        }
+        &__icons{
+        width:calc(100% - 60px);
+        margin:auto;
+        display:flex;
+        align-items:center;
+        justify-content:space-between;
+            li{
+            text-align:center;
+            margin:20px 0 0 0;
+            position:relative;
+                & a{
+                color:#909db3;
+                }
+                & img{
+                display:block;
+                max-width:22px;
+                margin:auto;
+                }
+                & span{
+                text-transform:uppercase;
+                font-size:0.9rem;
+                display:block;
+                padding-top:5px;
+                }
+                & i{
+                position:absolute;
+                top:-10px;
+                right:-10px;
+                width:20px;
+                height:20px;
+                border-radius:50%;
+                text-align:center;
+                line-height:20px;
+                font-size:1.1rem;
+                font-weight:600;
+                background-color:#000;
+                color:$color-lightgreen;
+                font-style:normal;
+                }
+                &.centered{
+                width:60px;
+                height:60px;
+                border-radius:100%;
+                @extend .gradient-lightgreen;
+                display:flex;
+                align-items:center;
+                justify-content:center;
+                margin:0px;
+                    & img{
+                    display:block;
+                    max-width:26px;
+                    margin:auto;
+                    }
+                }
+            }
+            &--photos{
+                & li{
+                margin:0px;
+                }
+            }
+            &--centered{
+            justify-content:center;
+                & li{
+                padding:0 5px;
+                    & img{
+                    max-width:32px;
+                    }
+                }
+            }
+        }
+        &__pagination{
+        position:absolute;
+        width:100%;
+        bottom:0px !important;
+        top:auto !important;
+        text-align:center;
+            & .swiper-pagination-bullet {
+                width:10px;
+                height:1px;
+                display: inline-block;
+                border-radius:0;
+                background: #909db3;
+                opacity:0.2;
+                margin:0 2px;
+                &-active{
+                background: #909db3;
+                opacity:1;
+                }
+            }
+            & .swiper-container-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet {
+                margin: 0 2px;
+            }
+        }
+        &__more{
+        position:absolute;
+        top:20px;
+        right:15px;
+        cursor:pointer;
+        z-index:999999;
+            & img{
+            display:block;
+            max-width:4px;
+            }
+        }
+        &__shop{
+        width:calc(100% - 20px);
+        padding:0 10px;
+        display:flex;
+        align-items:center;
+        justify-content:space-between;
+            &-cart{
+            background-image:url(../assets/images/icons/cart.svg);
+            background-repeat:no-repeat;
+            background-position:20px 50%;
+            background-size:18px;
+            padding-left:50px;
+            }
+        }
+    }
+    
+    
+    .bottom-fixed-button{
+        width:calc(100% - 40px);
+        position:absolute;
+        bottom:0px;
+        left:0px;
+        z-index:888;
+        background-color:#000;
+        padding:20px;
+        overflow:hidden;
+    }
 /*===============================================*/
 /* 15. FORMS */
 /*===============================================*/
