--- a/frontend/src/pages/Login/index.scss
+++ b/frontend/src/pages/Login/index.scss
@@ -70,7 +70,7 @@
 	margin-top:20px;
 	box-shadow: none;
 	-webkit-box-shadow: none;
-	-webkit-appearance: none;
+	//-webkit-appearance: none;
 	}
 	&__forgot-pass{
 	width:100%;
