--- a/frontend/src/styles/_globals.scss
+++ b/frontend/src/styles/_globals.scss
@@ -230,7 +230,7 @@ ul.custom-listing{
 
 .page {
     width: 100%;
-    height:100%;
+    height:100vh;
     &__content{
     width:calc(100% - 40px);
     height:100%;
